trying to fix the overscrolling into a blank white space on mobile

--- a/src/UI/styles/index.scss
+++ b/src/UI/styles/index.scss
@@ -63,6 +63,7 @@ body {
 .app-container {
     margin: 0 auto;
     min-height: 100dvh;
+    max-height: fit-content;
     background-color: var(--primary);
     display: flex;
     flex-direction: column;
@@ -88,6 +89,7 @@ body {
     // Remove footer gap on mobile
     @include mobile {
         min-height: 100%;
+        max-height: 100%;
         align-items: flex-start;
     }
 
